# zig-http-benchmarks

./: .editorconfig  .gitignore  README.md  bench.sh  benchmarks.json  benchmarks.md  plot_whisker.py
.github/workflows/: benchmark.yml
cpp-asio-httpclient/: build.zig  build.zig.zon
cpp-asio-httpclient/src/: main.cpp
cpp-asio-httpserver/: build.zig  build.zig.zon
cpp-asio-httpserver/src/: main.cpp
git-yolo/: build.zig
git-yolo/src/: main.zig
go-http-client/: go-http-client.go
python-http-client/: python-http-client.py
rust-attohttpc/: Cargo.toml
rust-attohttpc/src/: main.rs
rust-http-server/: Cargo.toml
rust-http-server/src/: main.rs
rust-hyper/: Cargo.toml
rust-hyper/src/: main.rs
rust-reqwest/: Cargo.toml
rust-reqwest/src/: main.rs
rust-ureq/: Cargo.toml
rust-ureq/src/: main.rs
std-http-client/: build.zig
std-http-client/src/: main.zig
std-http-server/: build.zig
zig-http-client/: build.zig
zig-http-client/src/: main.zig
zig-http-server/: build.zig
zig-http-server/src/: main.zig
