[package]
name = "rust-reqwest"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.18", default-features = false }
tokio = { version = "1.29.1", features = ["rt"] }

[profile.release]

opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = true
